--- a/src/main/docker/petstore.yaml
+++ b/src/main/docker/petstore.yaml
@@ -5,3 +5,6 @@ services:
     ports: ["3308:3306"]
     environment:
       MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: petstore
+    volumes:
+    - ./init.sql:/docker-entrypoint-initdb.d/init.sql
